--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
   </head>
   <body>
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
+      <a-box position="-25 16 0" rotation="0 0 0" height="4" depth="4" width="4" color="red"></a-box>
+      <a-box position="-19 20 0" rotation="0 0 0" height="4" depth="4" width="4" color="blue"></a-box>
+      <a-box position="-14.5 20 0" rotation="0 0 0" height="5" depth="5" width="7" color="yellow"></a-box>
+      <a-box position="-3 18 0" rotation="0 0 0" height="4.5" depth="4.5" width="4" color="blue"></a-box>
+      <a-box position="1 20 0" rotation="0 0 0" height="1.5" depth="4.5" width="4.5" color="red"></a-box>
+      <a-box position="9.5 19 0" rotation="0 0 0" height="6" depth="4.5" width="5" color="yellow"></a-box>
+      <a-box position="16 19 0" rotation="0 0 0" height="4.5" depth="4.5" width="4" color="blue"></a-box>
+      <a-box position="20 14 0" rotation="0 0 0" height="4" depth="4.5" width="4" color="red"></a-box>
+      <a-box position="-21 12 0" rotation="0 0 0" height="6" depth="4.5" width="6" color="yellow"></a-box>
+      <a-box position="-14 14 0" rotation="0 0 0" height="8" depth="4.5" width="5" color="blue"></a-box>
+      <a-box position="-7 12 0" rotation="0 0 0" height="6" depth="4.5" width="6" color="yellow"></a-box>
+      <a-box position="0 12 0" rotation="0 0 0" height="8" depth="4.5" width="5" color="red"></a-box>
+      <a-box position="6 12 0" rotation="0 0 0" height="5" depth="4.5" width="7" color="blue"></a-box>
+      <a-box position="15 10 0" rotation="0 0 0" height="5" depth="4.5" width="5" color="yellow"></a-box>
     </a-scene>
   </body>
 </html>
